// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage snapshots matches snapshot with Error object 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold text-gray-900 mb-4"
      >
        Oops!
      </h1>
      <p
        class="text-lg text-gray-600 mb-8"
      >
        Sorry, an unexpected error has occurred.
      </p>
      <p
        class="text-gray-500"
      >
        <i>
          Test error message
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorPage snapshots matches snapshot with route error response 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold text-gray-900 mb-4"
      >
        Oops!
      </h1>
      <p
        class="text-lg text-gray-600 mb-8"
      >
        Sorry, an unexpected error has occurred.
      </p>
      <p
        class="text-gray-500"
      >
        <i>
          Not Found
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorPage snapshots matches snapshot with string error 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold text-gray-900 mb-4"
      >
        Oops!
      </h1>
      <p
        class="text-lg text-gray-600 mb-8"
      >
        Sorry, an unexpected error has occurred.
      </p>
      <p
        class="text-gray-500"
      >
        <i>
          Direct string error message
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorPage snapshots matches snapshot with unknown error type 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold text-gray-900 mb-4"
      >
        Oops!
      </h1>
      <p
        class="text-lg text-gray-600 mb-8"
      >
        Sorry, an unexpected error has occurred.
      </p>
      <p
        class="text-gray-500"
      >
        <i>
          Unknown error
        </i>
      </p>
    </div>
  </div>
</div>
`;
